Design the index page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,8 +16,8 @@ body {
 
 img {
 	max-width: 100%;
-	height: auto;
-}
+	height: auto
+;}
 
 a {
 	color: #E7746F;
@@ -394,7 +394,7 @@ textarea.form-control {
 }
 
 /* ---------------------------------------------- /*
- * Servise
+ * Youth council 2015
 /* ---------------------------------------------- */
 
 .iconbox {
@@ -417,7 +417,7 @@ textarea.form-control {
 }
 
 /* ---------------------------------------------- /*
- * Skills
+ * Team
 /* ---------------------------------------------- */
 
 .chart {
@@ -707,9 +707,9 @@ textarea.form-control {
 }
 
 
-/*--------------------------------*/
-/***** Portfolio Common style *****/
-/*--------------------------------*/
+/*-------------------------------------------*/
+/***** Youth council 2013 Common style *****/
+/*-----------------------------------------*/
 
 .grid {
 	position: relative;
