Commit before add selector and host the web app

--- a/views/index.jade
+++ b/views/index.jade
@@ -41,7 +41,7 @@ block content
             li
               a(href="#youthcouncil2013") Youth council 2013
             li
-              a(href="#team") Team
+              a(href="#teams") Teams
             li
               a(href="#partners") Partners
             li
@@ -173,50 +173,48 @@ block content
     // .contaier
   // Youth council 2013 end
 
-  // Skills start
-  section#team.pfblock.pfblock-gray
+  // Team start
+  section#teams.pfblock.pfblock-gray
     .container
-      .row.team
+      .row.teams
         .row
           .col-sm-6.col-sm-offset-3
             .pfblock-header.wow.fadeInUp
-              h2.pfblock-title My Skills
+              h2.pfblock-title Youth council team
               .pfblock-line
               .pfblock-subtitle
-                | No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people&#8217;s eyes, to reveal the marvels around.
+                | There are 7 youth councils and each consists of 10 members.
         // .row
-        .col-sm-6.col-md-3.text-center
-          span.chart.easyPieChart(data-percent="80", style="width: 140px; height: 140px; line-height: 140px;")
-            span.percent 80
-          h3.text-center Programming
-        .col-sm-6.col-md-3.text-center
-          span.chart.easyPieChart(data-percent="90", style="width: 140px; height: 140px; line-height: 140px;")
-            span.percent 90
-          h3.text-center Design
-        .col-sm-6.col-md-3.text-center
-          span.chart.easyPieChart(data-percent="85", style="width: 140px; height: 140px; line-height: 140px;")
-            span.percent 85
-          h3.text-center Marketing
-        .col-sm-6.col-md-3.text-center
-          span.chart.easyPieChart(data-percent="95", style="width: 140px; height: 140px; line-height: 140px;")
-            span.percent 95
-          h3.text-center UI / UX
+        .col-sm-6.col-md-4
+          h3.text-center Erriadh
+        .col-sm-6.col-md-4
+          h3.text-center Hammam Sousse
+        .col-sm-6.col-md-4
+          h3.text-center Kalaa Kebira
+        .col-sm-6.col-md-4
+          h3.text-center Ksibet Mediouni
+        .col-sm-6.col-md-4
+          h3.text-center Monastir
+        .col-sm-6.col-md-4
+          h3.text-center M'Saken
+        .col-sm-6.col-md-4.col-md-offset-4
+          h3.text-center Sousse
       // End row
-  // Skills end
+  // team end
 
-  // Team starts
-  section.team
+  // call to action starts
+  section.calltoaction
     .container
       .row
         .col-md-12.col-lg-12
-          h2.wow.slideInRight(data-wow-delay=".1s") ARE YOU READY TO START?
+          h2.wow.slideInRight(data-wow-delay=".1s") ARE YOU READY TO JOIN?
           .calltoaction-decription.wow.slideInRight(data-wow-delay=".2s")
-            | I"m available for freelance projects.
+            | Choose the closest city and contact their coordinator.
         .col-md-12.col-lg-12.calltoaction-btn.wow.slideInRight(data-wow-delay=".3s")
-          a.btn.btn-lg(href="#contact") Hire Me
+          a.btn.btn-lg(href="#contact") Join us!
       // .row
     // .container
-  // CallToAction end
+  // call to action ends
 
 
   // Partners start
@@ -225,25 +223,31 @@ block content
       .row
         .col-sm-6.col-sm-offset-3
           .pfblock-header.wow.fadeInUp
-            h2.pfblock-title What my clients say
+            h2.pfblock-title Youth council 2015 partners
             .pfblock-line
             .pfblock-subtitle
-              | No one lights a lamp in order to hide it behind the door: the purpose of light is to create more light, to open people&#8217;s eyes, to reveal the marvels around.
+              | grâce à eux ...
       // .row
       .row
         #cbp-qtrotator.cbp-qtrotator
           .cbp-qtcontent
-            img(src="assets/images/client-1.jpg", alt="client-1")
+            img(src="/images/logoEureka.png", alt="logoEureka")
             blockquote
               p
-                | Work with John was a pleasure. He understood exactly what I wanted and created an awesome site for my company.
-              footer Pino Caruso
+                | Eureka is an association ...
+              footer Eureka
           .cbp-qtcontent
-            img(src="assets/images/client-2.jpg", alt="client-2")
+            img(src="/images/logoWls.jpeg", alt="logoWls")
             blockquote
               p
-                | I"m really happy with the results. Get 100% satisfaction is difficult but Alex got it without problems.
+                | We love sousse is an association ...
               footer Jane Doe
+          .cbp-qtcontent
+            img(src="/images/logoMila.jpeg", alt="logoMila")
+            blockquote
+              p
+                | MiLA is an organisation ...
+              footer MiLA
       // .row
     // .row
   // Partners end
