--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,6 +23,14 @@ a {
 	color: #E7746F;
 }
 
+.ajoinus {
+	font: 700 40px/1.2 Raleway, sans-serif;
+	text-transform: uppercase;
+	letter-spacing: 5px;
+	margin: 5px 0 5px;
+	color: #222;
+}
+
 a:hover {
 	text-decoration: none;
 	color: #999;
@@ -68,7 +76,7 @@ a,
  * Typography
 /* ---------------------------------------------- */
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, a  {
 	font: 700 40px/1.2 Raleway, sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 5px;
