--- a/views/index.jade
+++ b/views/index.jade
@@ -35,17 +35,35 @@ block content
         #custom-collapse.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right
             li
-              a(href="#home") Home
+              a(href="#home")= t('common_labels.home')
             li
-              a(href="#youthcouncil2015") Youth council 2015
+              a(href="#youthcouncil2015")= t('common_labels.youthcouncil2015') 
             li
-              a(href="#youthcouncil2013") Youth council 2013
+              a(href="#youthcouncil2013")= t('common_labels.youthcouncil2013') 
             li
-              a(href="#teams") Teams
+              a(href="#teams")= t('common_labels.teams') 
             li
-              a(href="#partners") Partners
+              a(href="#partners")= t('common_labels.partners') 
             li
-              a(href="#contact") Contact
+              a(href="#contact")= t('common_labels.contact') 
+            li
+              .btn-group
+                a.aFlag.dropdown-toggle(type='button', data-toggle='dropdown')
+                  span.fa.fa-flag
+                  span= Languages
+                  span.caret
+                ul.dropdown-menu(role='menu')
+                  li
+                    a(href='?setLng=ar') Arabe
+                  li.divider
+                  li
+                    a(href='?setLng=en') English
+                  li.divider
+                  li
+                    a(href='?setLng=fr') French
+                  li.divider
+                  li
+                    a(href='?setLng=dev') Test
     // .container
   // Navigation end
 
