--- a/views/index.jade
+++ b/views/index.jade
@@ -35,35 +35,34 @@ block content
         #custom-collapse.collapse.navbar-collapse
           ul.nav.navbar-nav.navbar-right
             li
-              a(href="#home")= t('common_labels.home')
+              a(href="#home")= t('nav.home')
             li
-              a(href="#youthcouncil2015")= t('common_labels.youthcouncil2015') 
+              a(href="#youthcouncil2015")= t('nav.youthcouncil2015') 
             li
-              a(href="#youthcouncil2013")= t('common_labels.youthcouncil2013') 
+              a(href="#youthcouncil2013")= t('nav.youthcouncil2013') 
             li
-              a(href="#teams")= t('common_labels.teams') 
+              a(href="#teams")= t('nav.teams') 
             li
-              a(href="#partners")= t('common_labels.partners') 
+              a(href="#partners")= t('nav.partners') 
             li
-              a(href="#contact")= t('common_labels.contact') 
+              a(href="#contact")= t('nav.contact') 
             li
-              .btn-group
-                a.aFlag.dropdown-toggle(type='button', data-toggle='dropdown')
-                  span.fa.fa-flag
-                  span= Languages
-                  span.caret
-                ul.dropdown-menu(role='menu')
-                  li
-                    a(href='?setLng=ar') Arabe
-                  li.divider
-                  li
-                    a(href='?setLng=en') English
-                  li.divider
-                  li
-                    a(href='?setLng=fr') French
-                  li.divider
-                  li
-                    a(href='?setLng=dev') Test
+              a.aFlag.dropdown-toggle(type='button', data-toggle='dropdown')
+                span.fa.fa-flag
+                span= t('nav.languages')
+                span.caret
+              ul.dropdown-menu(role='menu')
+                li
+                  a(href='?setLng=ar')= t('nav.arabe') 
+                li.divider
+                li
+                  a(href='?setLng=en')= t('nav.english') 
+                li.divider
+                li
+                  a(href='?setLng=fr')= t('nav.french') 
+                li.divider
+                li
+                  a(href='?setLng=dev')= t('nav.test') 
     // .container
   // Navigation end
 
