--- a/views/index.jade
+++ b/views/index.jade
@@ -107,7 +107,7 @@ block content
         .col-sm-3
           .iconbox.wow.slideInRight
             .iconbox-icon
-              span.icfa.fa-tachometer
+              span.icon.fa.fa-tachometer
             .iconbox-text
               h3.iconbox-title= t('youthcouncil2015.iconboxTitle4') 
               .iconbox-desc= t('youthcouncil2015.iconboxDesc4')
