--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,6 +31,15 @@ a {
 	color: #222;
 }
 
+.adiscover {
+	font: 700 10px/1.1 Raleway, sans-serif;
+	text-transform: uppercase;
+	letter-spacing: 5px;
+	margin: 5px 0 5px;
+	color: #222;
+	text-align: center;
+}
+
 a:hover {
 	text-decoration: none;
 	color: #999;
