--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,5 @@
 extends layout
   
-
-
 block content
 
   // Preloader
@@ -98,7 +96,7 @@ block content
             .iconbox-text
               h3.iconbox-title= t('youthcouncil2015.iconboxTitle2') 
               .iconbox-desc= t('youthcouncil2015.iconboxDesc3')
-              a.ajoinus(href='/futureprojects2015')= t('youthcouncil2015.readMore')
+              a.ajoinus(href='/projects2015')= t('youthcouncil2015.readMore')
         .col-sm-3
           .iconbox.wow.slideInRight
             .iconbox-icon
@@ -106,7 +104,7 @@ block content
             .iconbox-text
               h3.iconbox-title= t('youthcouncil2015.iconboxTitle3') 
               .iconbox-desc= t('youthcouncil2015.iconboxDesc4')
-              a.ajoinus(href='/workshops2015')= t('youthcouncil2015.readMore')
+              a.ajoinus(href='/training2015')= t('youthcouncil2015.readMore')
         .col-sm-3
           .iconbox.wow.slideInRight
             .iconbox-icon
@@ -135,7 +133,8 @@ block content
           .grid.wow.zoomIn
             figure.effect-bubba
               img(src="/images/item-1.jpg", alt="img01")
-              figcaption
+              figcaption                
+                a(href='/training2013')
                 h2= t('youthcouncil2013.figCaptionTitle11')
                   span= t('youthcouncil2013.figCaptionTitle12') 
                 p= t('youthcouncil2013.figCaptionDescription1')
@@ -144,6 +143,7 @@ block content
             figure.effect-bubba
               img(src="/images/item-2.jpg", alt="img01")
               figcaption
+                a(href='/projects2013')
                 h2= t('youthcouncil2013.figCaptionTitle21')
                   span= t('youthcouncil2013.figCaptionTitle22')
                 p= t('youthcouncil2013.figCaptionDescription2')
@@ -152,6 +152,7 @@ block content
             figure.effect-bubba
               img(src="/images/item-3.jpg", alt="img01")
               figcaption
+                a(href='/artcompetition')
                 h2= t('youthcouncil2013.figCaptionTitle31')
                   span= t('youthcouncil2013.figCaptionTitle32')
                 p= t('youthcouncil2013.figCaptionDescription3')
@@ -160,6 +161,7 @@ block content
             figure.effect-bubba
               img(src="/images/item-4.jpg", alt="img01")
               figcaption
+                a(href='/studytrip2013')
                 h2= t('youthcouncil2013.figCaptionTitle41')
                   span= t('youthcouncil2013.figCaptionTitle42')
                 p= t('youthcouncil2013.figCaptionDescription4')
@@ -168,6 +170,7 @@ block content
             figure.effect-bubba
               img(src="/images/item-5.jpg", alt="img01")
               figcaption
+                a(href='/newspapers')
                 h2= t('youthcouncil2013.figCaptionTitle51')
                   span= t('youthcouncil2013.figCaptionTitle52')
                 p= t('youthcouncil2013.figCaptionDescription5')
@@ -176,6 +179,7 @@ block content
             figure.effect-bubba
               img(src="/images/item-6.jpg", alt="img01")
               figcaption
+                a(href='/members2013')
                 h2= t('youthcouncil2013.figCaptionTitle61')
                   span= t('youthcouncil2013.figCaptionTitle62')
                 p= t('youthcouncil2013.figCaptionDescription6')
@@ -193,20 +197,55 @@ block content
               .pfblock-line
               .pfblock-subtitle= t('team.pfblockSubtitle')
         // .row
-        .col-sm-6.col-md-4
-          h3.text-center= t('team.textCenter1')
-        .col-sm-6.col-md-4
-          h3.text-center= t('team.textCenter2')
-        .col-sm-6.col-md-4
-          h3.text-center= t('team.textCenter3') 
-        .col-sm-6.col-md-4
-          h3.text-center= t('team.textCenter4') 
-        .col-sm-6.col-md-4
-          h3.text-center= t('team.textCenter5') 
-        .col-sm-6.col-md-4
-          h3.text-center= t('team.textCenter6') 
-        .col-sm-6.col-md-4.col-md-offset-4
-          h3.text-center= t('team.textCenter7') 
+        .col-xs-12.col-sm-4.col-md-4
+          .grid.wow.zoomIn
+            figure.effect-bubba
+              img(src="/images/item-1.jpg", alt="img01")
+              figcaption                
+                a(href='/erriadhteam')
+                h2= t('team.textCenter1')
+        .col-xs-12.col-sm-4.col-md-4
+          .grid.wow.zoomIn
+            figure.effect-bubba
+              img(src="/images/item-2.jpg", alt="img01")
+              figcaption
+                a(href='/hammamsousseteam')
+                h2= t('team.textCenter2')
+        .col-xs-12.col-sm-4.col-md-4
+          .grid.wow.zoomIn
+            figure.effect-bubba
+              img(src="/images/item-3.jpg", alt="img01")
+              figcaption
+                a(href='/kalaakebirateam')
+                h2= t('team.textCenter3')
+        .col-xs-12.col-sm-4.col-md-4
+          .grid.wow.zoomIn
+            figure.effect-bubba
+              img(src="/images/item-4.jpg", alt="img01")
+              figcaption
+                a(href='/ksibetmediouniteam')
+                h2= t('team.textCenter4')
+        .col-xs-12.col-sm-4.col-md-4
+          .grid.wow.zoomIn
+            figure.effect-bubba
+              img(src="/images/item-5.jpg", alt="img01")
+              figcaption
+                a(href='/monastirteam')
+                h2= t('team.textCenter5')
+        .col-xs-12.col-sm-4.col-md-4
+          .grid.wow.zoomIn
+            figure.effect-bubba
+              img(src="/images/item-6.jpg", alt="img01")
+              figcaption
+                a(href='/msakenteam')
+                h2= t('team.textCenter6')
+        .col-xs-12.col-sm-4.col-md-4.col-sm-offset-4
+          .grid.wow.zoomIn
+            figure.effect-bubba
+              img(src="/images/item-6.jpg", alt="img01")
+              figcaption
+                a(href='/sousseteam')
+                h2= t('team.textCenter7')
       // End row
   // team end
 
@@ -286,4 +325,3 @@ block content
 
 
 block footer
-
