--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,8 +15,8 @@ body {
 }
 
 img {
-	max-width: 100%;
-	height: auto
+	width: 360;
+	height: 250
 ;}
 
 a {
@@ -312,7 +312,7 @@ textarea.form-control {
     text-align: center;
 }
 .calltoaction {
-    background: url(../images/item-3.jpg);
+    background: url(../images/calltoaction.jpg);
 	background-color: #222;
 	background-repeat: no-repeat;
 	background-position: 0 0;
