--- a/views/index.jade
+++ b/views/index.jade
@@ -132,7 +132,7 @@ block content
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/images/item-1.jpg", alt="img01")
+              img(src="/images/item-1.jpg",height="250", width="360",alt="img01")
               figcaption                
                 a(href='/training2013')
                 h2= t('youthcouncil2013.figCaptionTitle11')
@@ -141,7 +141,7 @@ block content
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/images/item-2.jpg", alt="img01")
+              img(src="/images/item-2.jpg",height="250", width="360",alt="img01")
               figcaption
                 a(href='/projects2013')
                 h2= t('youthcouncil2013.figCaptionTitle21')
@@ -150,7 +150,7 @@ block content
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/images/item-3.jpg", alt="img01")
+              img(src="/images/item-3.jpg",height="250", width="360",alt="img01")
               figcaption
                 a(href='/artcompetition')
                 h2= t('youthcouncil2013.figCaptionTitle31')
@@ -159,7 +159,7 @@ block content
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/images/item-4.jpg", alt="img01")
+              img(src="/images/item-4.jpg",height="250", width="360",alt="img01")
               figcaption
                 a(href='/studytrip2013')
                 h2= t('youthcouncil2013.figCaptionTitle41')
@@ -168,7 +168,7 @@ block content
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/images/item-5.jpg", alt="img01")
+              img(src="/images/item-5.jpg",height="250", width="360",alt="img01")
               figcaption
                 a(href='/newspapers')
                 h2= t('youthcouncil2013.figCaptionTitle51')
@@ -177,7 +177,7 @@ block content
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/images/item-6.jpg", alt="img01")
+              img(src="/images/item-6.jpg",height="250", width="360",alt="img01")
               figcaption
                 a(href='/members2013')
                 h2= t('youthcouncil2013.figCaptionTitle61')
@@ -200,42 +200,42 @@ block content
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/images/item-1.jpg", alt="img01")
+              img(src="/images/item-1.jpg",height="250", width="360",alt="img01")
               figcaption                
                 a(href='/erriadhteam')
                 h2= t('team.textCenter1')
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/images/item-2.jpg", alt="img01")
+              img(src="/images/item-2.jpg",height="250", width="360",alt="img01")
               figcaption
                 a(href='/hammamsousseteam')
                 h2= t('team.textCenter2')
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/images/item-3.jpg", alt="img01")
+              img(src="/images/item-3.jpg",height="250", width="360",alt="img01")
               figcaption
                 a(href='/kalaakebirateam')
                 h2= t('team.textCenter3')
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/images/item-4.jpg", alt="img01")
+              img(src="/images/item-4.jpg",height="250", width="360",alt="img01")
               figcaption
                 a(href='/ksibetmediouniteam')
                 h2= t('team.textCenter4')
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/images/item-5.jpg", alt="img01")
+              img(src="/images/item-5.jpg", height="250", width="360",alt="img01")
               figcaption
                 a(href='/monastirteam')
                 h2= t('team.textCenter5')
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
-              img(src="/images/item-6.jpg", alt="img01")
+              img(src="/images/item-6.jpg", height="250", width="360",alt="img01")
               figcaption
                 a(href='/msakenteam')
                 h2= t('team.textCenter6')
@@ -276,20 +276,20 @@ block content
       .row
         #cbp-qtrotator.cbp-qtrotator
           .cbp-qtcontent
-            img(src="/images/logoEureka.png", alt="logoEureka")
+            img(src="/images/logoEureka.png", height="180", width="300", alt="logoEureka")
             blockquote
               p= t('partners.blockQuote1')
               footer= t('partners.footer1') 
           .cbp-qtcontent
-            img(src="/images/logoWls.jpeg", alt="logoWls")
+            img(src="/images/logoWls.jpeg", height="180", width="300", alt="logoWls")
             blockquote
-              p= t('partners.blockQuote1')
-              footer= t('partners.footer1') 
+              p= t('partners.blockQuote2')
+              footer= t('partners.footer2') 
           .cbp-qtcontent
-            img(src="/images/logoMila.jpeg", alt="logoMila")
+            img(src="/images/logoMila.jpeg", height="180", width="300", alt="logoMila")
             blockquote
-              p= t('partners.blockQuote1')
-              footer= t('partners.footer1') 
+              p= t('partners.blockQuote3')
+              footer= t('partners.footer3') 
       // .row
     // .row
   // Partners end
