--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
     link(rel='stylesheet', media ='screen', href='bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', media ='screen', href='/css/simple-line-icons.css')
     link(rel='stylesheet', media ='screen', href='/css/font-awesome.min.css')
+      link(rel='stylesheet', media ='screen', href='/css/bootstrap-image-gallery.min')
     // Javascript files   
     script(src='/js/modernizr.custom.js')  
     script(src='/js/jquery-1.11.1.min.js')
@@ -20,7 +21,8 @@ html
     script(src='/js/jquery.easypiechart.js') 
     script(src='/js/waypoints.min.js')
     script(src='/js/jquery.cbpQTRotator.js')
-    script(src='/js/custom.js')            
+    script(src='/js/custom.js')
+    script(src='/js/bootstrap-image-gallery.min.js')  
 
   body
     block content
