--- a/views/index.jade
+++ b/views/index.jade
@@ -88,7 +88,7 @@ block content
             .iconbox-text
               h3.iconbox-title= t('youthcouncil2015.iconboxTitle1') 
               .iconbox-desc= t('youthcouncil2015.iconboxDesc2')
-              a.ajoinus(href='/localyouthcouncils')= t('youthcouncil2015.readMore')
+              a.ajoinus(href='/youthcouncil2015')= t('youthcouncil2015.readMore')
         .col-sm-3
           .iconbox.wow.slideInLeft
             .iconbox-icon
@@ -96,7 +96,7 @@ block content
             .iconbox-text
               h3.iconbox-title= t('youthcouncil2015.iconboxTitle2') 
               .iconbox-desc= t('youthcouncil2015.iconboxDesc3')
-              a.ajoinus(href='/projects2015')= t('youthcouncil2015.readMore')
+              a.ajoinus(href='/youthcouncil2015')= t('youthcouncil2015.readMore')
         .col-sm-3
           .iconbox.wow.slideInRight
             .iconbox-icon
@@ -104,7 +104,7 @@ block content
             .iconbox-text
               h3.iconbox-title= t('youthcouncil2015.iconboxTitle3') 
               .iconbox-desc= t('youthcouncil2015.iconboxDesc4')
-              a.ajoinus(href='/training2015')= t('youthcouncil2015.readMore')
+              a.ajoinus(href='/youthcouncil2015')= t('youthcouncil2015.readMore')
         .col-sm-3
           .iconbox.wow.slideInRight
             .iconbox-icon
@@ -134,7 +134,7 @@ block content
             figure.effect-bubba
               img(src="/images/item-1.jpg",height="250", width="360",alt="img01")
               figcaption                
-                a(href='/training2013')
+                a(href='/youthcouncil2013')
                 h2= t('youthcouncil2013.figCaptionTitle11')
                   span= t('youthcouncil2013.figCaptionTitle12') 
                 p= t('youthcouncil2013.figCaptionDescription1')
@@ -143,7 +143,7 @@ block content
             figure.effect-bubba
               img(src="/images/item-2.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/projects2013')
+                a(href='/youthcouncil2013')
                 h2= t('youthcouncil2013.figCaptionTitle21')
                   span= t('youthcouncil2013.figCaptionTitle22')
                 p= t('youthcouncil2013.figCaptionDescription2')
@@ -152,7 +152,7 @@ block content
             figure.effect-bubba
               img(src="/images/item-3.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/artcompetition')
+                a(href='/youthcouncil2013')
                 h2= t('youthcouncil2013.figCaptionTitle31')
                   span= t('youthcouncil2013.figCaptionTitle32')
                 p= t('youthcouncil2013.figCaptionDescription3')
@@ -161,7 +161,7 @@ block content
             figure.effect-bubba
               img(src="/images/item-4.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/studytrip2013')
+                a(href='/youthcouncil2013')
                 h2= t('youthcouncil2013.figCaptionTitle41')
                   span= t('youthcouncil2013.figCaptionTitle42')
                 p= t('youthcouncil2013.figCaptionDescription4')
@@ -170,7 +170,7 @@ block content
             figure.effect-bubba
               img(src="/images/item-5.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/newspapers')
+                a(href='/youthcouncil2013')
                 h2= t('youthcouncil2013.figCaptionTitle51')
                   span= t('youthcouncil2013.figCaptionTitle52')
                 p= t('youthcouncil2013.figCaptionDescription5')
@@ -179,7 +179,7 @@ block content
             figure.effect-bubba
               img(src="/images/item-6.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/members2013')
+                a(href='/youthcouncil2013')
                 h2= t('youthcouncil2013.figCaptionTitle61')
                   span= t('youthcouncil2013.figCaptionTitle62')
                 p= t('youthcouncil2013.figCaptionDescription6')
@@ -202,49 +202,49 @@ block content
             figure.effect-bubba
               img(src="/images/item-1.jpg",height="250", width="360",alt="img01")
               figcaption                
-                a(href='/erriadhteam')
+                a(href='/youthcouncil2015')
                 h2= t('team.textCenter1')
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
               img(src="/images/item-2.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/hammamsousseteam')
+                a(href='/youthcouncil2015')
                 h2= t('team.textCenter2')
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
               img(src="/images/item-3.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/kalaakebirateam')
+                a(href='/youthcouncil2015')
                 h2= t('team.textCenter3')
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
               img(src="/images/item-4.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/ksibetmediouniteam')
+                a(href='/youthcouncil2015')
                 h2= t('team.textCenter4')
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
               img(src="/images/item-5.jpg", height="250", width="360",alt="img01")
               figcaption
-                a(href='/monastirteam')
+                a(href='/youthcouncil2015')
                 h2= t('team.textCenter5')
         .col-xs-12.col-sm-4.col-md-4
           .grid.wow.zoomIn
             figure.effect-bubba
               img(src="/images/item-6.jpg", height="250", width="360",alt="img01")
               figcaption
-                a(href='/msakenteam')
+                a(href='/youthcouncil2015')
                 h2= t('team.textCenter6')
         .col-xs-12.col-sm-4.col-md-4.col-sm-offset-4
           .grid.wow.zoomIn
             figure.effect-bubba
               img(src="/images/item-6.jpg", alt="img01")
               figcaption
-                a(href='/sousseteam')
+                a(href='/youthcouncil2015')
                 h2= t('team.textCenter7')
       // End row
   // team end
