Fix download pdf and redirection to views

--- a/views/index.jade
+++ b/views/index.jade
@@ -112,7 +112,7 @@ block content
             .iconbox-text
               h3.iconbox-title= t('youthcouncil2015.iconboxTitle4') 
               .iconbox-desc= t('youthcouncil2015.iconboxDesc5')
-              a.ajoinus(href='/Study_visit_agenda.pdf')= t('youthcouncil2015.download')
+              a.ajoinus(href='/download_calendar')= t('youthcouncil2015.download')
 
       // .row
     // .container
