--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,7 @@ html
     link(rel='stylesheet', media ='screen', href='bootstrap/css/bootstrap.min.css')
     link(rel='stylesheet', media ='screen', href='/css/simple-line-icons.css')
     link(rel='stylesheet', media ='screen', href='/css/font-awesome.min.css')
-    link(rel='stylesheet', media ='screen', href='/css/bootstrap-image-gallery.min')
+    link(rel='stylesheet', media ='screen', href='/css/bootstrap-image-gallery.min.css')
     // Javascript files   
     script(src='/js/modernizr.custom.js')  
     script(src='/js/jquery-1.11.1.min.js')
